syntax = "proto3";

package micro.apps.proto.account.v1;

option java_multiple_files = true;
option java_outer_classname = "AccountServiceProto";
option java_package = "micro.apps.proto.account.v1";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "micro/apps/proto/common/v1/common.proto";

// Account Service
service AccountService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Write(WriteRequest) returns (google.protobuf.Empty);
}

message GetRequest {
  google.protobuf.StringValue key = 1
      [(validate.rules).string = { min_len: 0 }];
}

message GetResponse {
  micro.apps.proto.common.v1.Account account = 1;
}

message WriteRequest {
  micro.apps.proto.common.v1.Account account = 1;
}
